@startuml

title __IMPL's Class Diagram__\n

  namespace com.kade.mcps {
    namespace service {
      namespace impl {
        class com.kade.mcps.service.impl.AuthServiceImpl {
            - authenticationManager : AuthenticationManager
            - passwordEncoder : PasswordEncoder
            + AuthServiceImpl()
            + authenticate()
            + refresh()
        }
      }
    }
  }
  

  namespace com.kade.mcps {
    namespace service {
      namespace impl {
        class com.kade.mcps.service.impl.UserServiceImpl {
            - bCryptPasswordEncoder : BCryptPasswordEncoder
            + UserServiceImpl()
            + loadUserByUsername()
            + signUpUser()
        }
      }
    }
  }
  

  com.kade.mcps.service.impl.AuthServiceImpl .up.|> com.kade.mcps.service.AuthService
  com.kade.mcps.service.impl.AuthServiceImpl o-- com.kade.mcps.security.JwtTokenProvider : jwtTokenProvider
  com.kade.mcps.service.impl.AuthServiceImpl o-- com.kade.mcps.repository.UserRepository : repository
  com.kade.mcps.service.impl.UserServiceImpl .up.|> com.kade.mcps.service.UserService
  com.kade.mcps.service.impl.UserServiceImpl .up.|> org.springframework.security.core.userdetails.UserDetailsService
  com.kade.mcps.service.impl.UserServiceImpl o-- com.kade.mcps.repository.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
